--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,9 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <finalName>auth-service</finalName>
+                </configuration>
             </plugin>
         </plugins>
     </build>
